--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test:unit": "jest tests/unit",
     "test:integration": "jest tests/integration",
     "test:e2e": "playwright test",
-    "dev": "live-server --host=localhost --port=8080",
+    "dev": "live-server --host=localhost --port=8080 --no-browser --quiet",
     "build": "npm run test && npm run build:prod",
     "build:prod": "echo 'Production build - TODO: Add build process'",
     "lint": "eslint js/ tests/",
