--- a/.babelrc
+++ b/.babelrc
@@ -1,12 +1,6 @@
 {
   "presets": [
-    [
-      "@babel/preset-env",
-      {
-        "targets": {
-          "node": "current"
-        }
-      }
-    ]
-  ]
+    "next/babel"
+  ],
+  "plugins": []
 }
