--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "test:unit": "jest tests/unit",
     "test:integration": "jest tests/integration",
     "test:e2e": "playwright test",
-    "dev": "live-server --host=localhost --port=8080 --no-browser --quiet",
-    "build": "npm run test && npm run build:prod",
-    "build:prod": "echo 'Production build - TODO: Add build process'",
-    "lint": "eslint js/ tests/",
-    "lint:fix": "eslint js/ tests/ --fix"
+    "dev:old": "live-server --host=localhost --port=8080 --no-browser --quiet",
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "build:prod": "npm run build",
+    "lint": "eslint js/ tests/ src/",
+    "lint:fix": "eslint js/ tests/ src/ --fix"
   },
   "keywords": [
     "football",
@@ -30,18 +32,31 @@
   "devDependencies": {
     "@babel/core": "^7.28.3",
     "@babel/preset-env": "^7.28.3",
+    "@babel/preset-react": "^7.27.1",
+    "@babel/preset-typescript": "^7.27.1",
+    "@eslint/eslintrc": "^3",
     "@playwright/test": "^1.40.0",
+    "@tailwindcss/postcss": "^4",
     "@testing-library/dom": "^9.3.4",
     "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/user-event": "^14.5.1",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "babel-jest": "^29.7.0",
-    "eslint": "^8.55.0",
+    "eslint": "^9",
+    "eslint-config-next": "15.5.2",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "live-server": "^1.2.2"
+    "live-server": "^1.2.2",
+    "tailwindcss": "^4",
+    "typescript": "^5"
   },
   "dependencies": {
-    "firebase": "^10.7.1"
+    "firebase": "^12.2.1",
+    "next": "15.5.2",
+    "react": "19.1.0",
+    "react-dom": "19.1.0"
   },
   "jest": {
     "testEnvironment": "jsdom",
