--- a/package.json
+++ b/package.json
@@ -53,10 +53,13 @@
     "typescript": "^5"
   },
   "dependencies": {
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "firebase": "^12.2.1",
     "next": "15.5.2",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "tailwind-merge": "^3.3.1"
   },
   "jest": {
     "testEnvironment": "jsdom",
