--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "firebase": "^12.2.1",
+    "firebase-admin": "^13.5.0",
     "next": "15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
