feat: implement VP9 video transcoding for smaller uploads
- Add VideoTranscodingService using FFmpeg.wasm for client-side VP9 encoding
- Create VideoTranscoding component with progress UI and quality options
- Update VideoUpload component to integrate transcoding workflow
- Add transcoding metadata fields to VideoMetadata type
- Configure Next.js for SharedArrayBuffer support (required for FFmpeg.wasm)
- Support quality presets: high, medium, low with automatic recommendations
- Show compression ratio and file size reduction in UI
- Maintain thumbnail generation from original file for better quality

Features:
- Client-side transcoding reduces server load
- VP9 format provides better compression than H.264
- Real-time progress tracking with time estimates
- Automatic quality selection based on file size
- Fallback to original file if transcoding fails
- Visual indicators for transcoded vs original files

--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
     "typescript": "^5"
   },
   "dependencies": {
+    "@ffmpeg/core": "^0.12.10",
+    "@ffmpeg/ffmpeg": "^0.12.15",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "firebase": "^12.2.1",
